# mumbli

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  install.sh  project.yml  spec.md
.githooks/: commit-msg
.github/: release-please-config.json
.github/workflows/: deploy-docs.yml  pr-title.yml  release-please.yml  test-build.yml
MumbliApp/: AppDelegate.swift  Info.plist  MumbliApp.swift
MumbliApp.xcodeproj/: project.pbxproj
MumbliApp/Core/: AudioCaptureManager.swift  (+6 more)
MumbliAppUITests/: DictationUITests.swift  FirstLaunchUITests.swift  HistoryUITests.swift  MenuBarUITests.swift  MumbliAppUITests.swift  OverlayUITests.swift  SettingsUITests.swift  TestHelpers.swift
backend/: .env.example  main.py  pyproject.toml
backend/services/: auth.py  polishing.py  transcription.py
benchmarks/: .env.example  bench.py  polish_bench.py  pyproject.toml  quality.py  vocab_bench.py
docs/: ahrefs-analytics.js  benchmarks.mdx  caf9d963-c4bd-4c62-9160-4c960aebe0f0.txt  changelog.mdx  custom-vocabulary-for-dictation.mdx  dictation-app-for-mac.mdx  docs.json  for-developers.mdx  index.mdx  menu-bar-dictation-app.mdx  privacy.mdx  umami-analytics.js  voice-to-text-for-mac.mdx  works-in-any-app.mdx
qa/: manual-tests.md  regression-checklist.md  test-plan.md  user-stories.md
reports/: api-keys-design-spec.md  bug-fix-verification.md  debug-verification.md  dot-animation-spec.md  overlay-design-spec.md  overlay-states-spec-v2.md  overlay-states-spec.md  performance-benchmark-2026-03-31.md  settings-design-spec.md  ui-test-verification.md  vu-prominent-spec.md
(+43 files in other folders)
